--- a/overview/src/main/resources/log4j2.properties
+++ b/overview/src/main/resources/log4j2.properties
@@ -5,8 +5,8 @@ appender.console.type = Console
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = [%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 
-logger.fastserde.name = dev.irontools
-logger.fastserde.level = DEBUG
+logger.irontools.name = dev.irontools
+logger.irontools.level = DEBUG
 
 #logger.flinkcodegen.name = org.apache.flink.table.planner.codegen
 #logger.flinkcodegen.level = TRACE
