--- a/table/src/main/resources/log4j2.properties
+++ b/table/src/main/resources/log4j2.properties
@@ -1,10 +1,12 @@
-rootLogger = WARN, STDOUT
+rootLogger = INFO, STDOUT
 
 appender.console.name = STDOUT
 appender.console.type = Console
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = [%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 
-logger.fastdispatcher.name = org.apache.flink.runtime.dispatcher.DispatcherRestEndpoint
-logger.fastdispatcher.level = INFO
+logger.irontools.name = dev.irontools
+logger.irontools.level = DEBUG
 
+# logger.flinkcodegen.name = org.apache.flink.table.planner.codegen
+# logger.flinkcodegen.level = TRACE
