--- a/table/pom.xml
+++ b/table/pom.xml
@@ -41,16 +41,16 @@
             <artifactId>flink-table-runtime</artifactId>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>org.apache.flink</groupId>
-            <artifactId>flink-table-planner-loader</artifactId>
-            <scope>provided</scope>
-        </dependency>
         <!-- <dependency> -->
         <!--     <groupId>org.apache.flink</groupId> -->
-        <!--     <artifactId>flink-table-planner_2.12</artifactId> -->
+        <!--     <artifactId>flink-table-planner-loader</artifactId> -->
         <!--     <scope>provided</scope> -->
         <!-- </dependency> -->
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-table-planner_2.12</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.flink</groupId>
