--- a/datastream/src/main/resources/log4j2.properties
+++ b/datastream/src/main/resources/log4j2.properties
@@ -5,6 +5,6 @@ appender.console.type = Console
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = [%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 
-logger.fastdispatcher.name = org.apache.flink.runtime.dispatcher.DispatcherRestEndpoint
-logger.fastdispatcher.level = INFO
+logger.flinkdispatcher.name = org.apache.flink.runtime.dispatcher.DispatcherRestEndpoint
+logger.flinkdispatcher.level = INFO
 
