--- a/table/src/main/resources/log4j2.properties
+++ b/table/src/main/resources/log4j2.properties
@@ -5,6 +5,9 @@ appender.console.type = Console
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = [%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 
+logger.flinkdispatcher.name = org.apache.flink.runtime.dispatcher.DispatcherRestEndpoint
+logger.flinkdispatcher.level = INFO
+
 logger.irontools.name = dev.irontools
 logger.irontools.level = DEBUG
 
