--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,13 @@
                 <version>${flink.version}</version>
                 <scope>provided</scope>
             </dependency>
+            <dependency>
+                <groupId>org.apache.flink</groupId>
+                <artifactId>flink-test-utils</artifactId>
+                <type>test-jar</type>
+                <version>${flink.version}</version>
+                <scope>test</scope>
+            </dependency>
 
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
